--- a/Boston Housing Linear Regression Analysis.ipynb
+++ b/Boston Housing Linear Regression Analysis.ipynb
@@ -1118,6 +1118,7 @@
     }
    ],
    "source": [
+    "# creating some matrix plots to visualize correlation\n",
     "bdf.corr()"
    ]
   },
@@ -1420,7 +1421,9 @@
    "source": [
     "# Checking coefficients of X values\n",
     "cdf = pd.DataFrame(lm.coef_,X.columns,columns=['Coefficient'])\n",
-    "cdf"
+    "cdf\n",
+    "# For every unit increase in the variables from the index, housing prices\n",
+    "# rise/fall by the coefficient value from the column."
    ]
   },
   {
@@ -1470,6 +1473,7 @@
     }
    ],
    "source": [
+    "# Time to compare prediction and test outcome\n",
     "prediction = lm.predict(X_test)\n",
     "prediction"
    ]
@@ -1522,7 +1526,8 @@
     }
    ],
    "source": [
-    "# 71.2% accuracy for regression test\n",
+    "# The r-squared score tells us that 71.2% less variation in this model\n",
+    "# than the mean.\n",
     "lm.score(X_test,y_test)"
    ]
   },
@@ -1587,7 +1592,10 @@
     }
    ],
    "source": [
-    "sns.distplot((y_test-prediction))"
+    "sns.distplot((y_test-prediction))\n",
+    "# This shows a generally residual of the tested and predicted values.\n",
+    "# Since it is somewhat normally distributed, the linear regression model\n",
+    "# was a good choice for this dataset."
    ]
   },
   {
@@ -1615,7 +1623,7 @@
     }
    ],
    "source": [
-    "# These three metrics are for predicting model accuracy\n",
+    "# These three metrics are for predicting model accuracy.\n",
     "print(f'MAE = {metrics.mean_absolute_error(y_test,prediction)}')\n",
     "print(f'MSE = {metrics.mean_squared_error(y_test,prediction)}')\n",
     "print(f'RMSE = {np.sqrt(metrics.mean_squared_error(y_test,prediction))}')"
@@ -1643,20 +1651,6 @@
     "r2 = metrics.r2_score(y_test,prediction)\n",
     "r2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
