--- a/Boston Housing Linear Regression Analysis.ipynb
+++ b/Boston Housing Linear Regression Analysis.ipynb
@@ -736,7 +736,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a16123e50>"
+       "<seaborn.axisgrid.PairGrid at 0x1a1b3ba5d0>"
       ]
      },
      "execution_count": 10,
@@ -768,7 +768,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c43c3d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2046d210>"
       ]
      },
      "execution_count": 11,
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c854f90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a217b9cd0>"
       ]
      },
      "execution_count": 13,
@@ -1162,7 +1162,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.matrix.ClusterGrid at 0x1a1e1524d0>"
+       "<seaborn.matrix.ClusterGrid at 0x1a233d59d0>"
       ]
      },
      "execution_count": 14,
@@ -1526,8 +1526,8 @@
     }
    ],
    "source": [
-    "# The r-squared score tells us that 71.2% less variation in this model\n",
-    "# than the mean.\n",
+    "# The r-squared score tells us that there is\n",
+    "# 71.2% less variation in this model than the mean.\n",
     "lm.score(X_test,y_test)"
    ]
   },
@@ -1539,7 +1539,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ec7e210>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23f1d850>"
       ]
      },
      "execution_count": 27,
@@ -1571,7 +1571,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1f5f8ad0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2488d3d0>"
       ]
      },
      "execution_count": 28,
@@ -1630,26 +1630,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Statsmodel Method (get more info like p-value for significance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing statsmodel\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   MEDV   R-squared:                       0.741\n",
+      "Model:                            OLS   Adj. R-squared:                  0.734\n",
+      "Method:                 Least Squares   F-statistic:                     108.1\n",
+      "Date:                Mon, 24 Feb 2020   Prob (F-statistic):          6.72e-135\n",
+      "Time:                        22:51:27   Log-Likelihood:                -1498.8\n",
+      "No. Observations:                 506   AIC:                             3026.\n",
+      "Df Residuals:                     492   BIC:                             3085.\n",
+      "Df Model:                          13                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         36.4595      5.103      7.144      0.000      26.432      46.487\n",
+      "CRIM          -0.1080      0.033     -3.287      0.001      -0.173      -0.043\n",
+      "ZN             0.0464      0.014      3.382      0.001       0.019       0.073\n",
+      "INDUS          0.0206      0.061      0.334      0.738      -0.100       0.141\n",
+      "CHAS           2.6867      0.862      3.118      0.002       0.994       4.380\n",
+      "NOX          -17.7666      3.820     -4.651      0.000     -25.272     -10.262\n",
+      "RM             3.8099      0.418      9.116      0.000       2.989       4.631\n",
+      "AGE            0.0007      0.013      0.052      0.958      -0.025       0.027\n",
+      "DIS           -1.4756      0.199     -7.398      0.000      -1.867      -1.084\n",
+      "RAD            0.3060      0.066      4.613      0.000       0.176       0.436\n",
+      "TAX           -0.0123      0.004     -3.280      0.001      -0.020      -0.005\n",
+      "PTRATIO       -0.9527      0.131     -7.283      0.000      -1.210      -0.696\n",
+      "B              0.0093      0.003      3.467      0.001       0.004       0.015\n",
+      "LSTAT         -0.5248      0.051    -10.347      0.000      -0.624      -0.425\n",
+      "==============================================================================\n",
+      "Omnibus:                      178.041   Durbin-Watson:                   1.078\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              783.126\n",
+      "Skew:                           1.521   Prob(JB):                    8.84e-171\n",
+      "Kurtosis:                       8.281   Cond. No.                     1.51e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.51e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kqmbui/opt/anaconda3/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2495: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+      "  return ptp(axis=axis, out=out, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Easier way to get important summary statistics like R-squared, P-values, coefficients, etc.\n",
+    "model = sm.OLS(y,sm.add_constant(X)).fit()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "0.7123963332666872"
+       "const      36.459488\n",
+       "CRIM       -0.108011\n",
+       "ZN          0.046420\n",
+       "INDUS       0.020559\n",
+       "CHAS        2.686734\n",
+       "NOX       -17.766611\n",
+       "RM          3.809865\n",
+       "AGE         0.000692\n",
+       "DIS        -1.475567\n",
+       "RAD         0.306049\n",
+       "TAX        -0.012335\n",
+       "PTRATIO    -0.952747\n",
+       "B           0.009312\n",
+       "LSTAT      -0.524758\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# r-squared score determines goodness-of-fit of model to data points\n",
-    "# So, the model has 71.2% less variation in the mean of the data (good)\n",
-    "r2 = metrics.r2_score(y_test,prediction)\n",
-    "r2"
+    "# Slope of the fitted regression model is const, so 36.459488\n",
+    "model.params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For linear "
    ]
   }
  ],
